--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "peer": "^0.6.1",
     "socket.io": "^4.1.2",
