--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "fs": "0.0.1-security",
+    "mongoose": "^5.13.2",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "peer": "^0.6.1",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
